# MPC_cartpole_c-

./: CMakeLists.txt  README.md
include/: CartpoleMPC.h
model/: cartpole.xml  cartpole_no_names_changed.xml
output/: U_K_result.csv  X_K_result.csv
python_code/: cartpole_MPC.py  mujoco_io.py  pytbind_test.py  show_cartpole.py
python_output/: control_inputs.csv  sys_outputs.csv
scr/: CartpoleMPC.cpp  MPC_Matrices.cpp  MPC_test.cpp  NMPC_C_and_MATLAB.cpp  Prediction.cpp  bindcode.cpp
test/: xml_open.cpp
